--- a/BookmarkManagerClient/pom.xml
+++ b/BookmarkManagerClient/pom.xml
@@ -14,6 +14,31 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      
+      <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-assembly-plugin</artifactId>
+			<executions>
+				<execution>
+					<phase>package</phase>
+					<goals>
+						<goal>single</goal>
+					</goals>
+					<configuration>
+						<archive>
+							<manifest>
+								<mainClass>
+									bg.sofia.uni.fmi.mjt.bookmarks.BookmarkManagerClient
+								</mainClass>
+							</manifest>
+						</archive>
+						<descriptorRefs>
+							<descriptorRef>jar-with-dependencies</descriptorRef>
+						</descriptorRefs>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
     </plugins>
   </build>
 </project>
